// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedItemDetails should render 1`] = `
<div
  className="FeedItemDetails text text_type_main-default"
>
  <span
    className="mb-4 text_type_main-medium"
  >
    Name 1
  </span>
  <span
    className="mb-4 "
  >
    В работе
  </span>
  <div
    className="Scroller mb-4"
  >
    FeedItemIngredients
  </div>
  <div
    className="FeedItemDetailsFooter"
  >
    <span
      className="text_color_inactive"
    >
      01.01.2020, 00:00:00
    </span>
    <span
      className="text_type_digits-default"
    >
      10
      CurrencyIcon
    </span>
  </div>
</div>
`;

exports[`FeedItemDetails should render 2`] = `
<div
  className="FeedItemDetails text text_type_main-default"
>
  <span
    className="mb-4 text_type_main-medium"
  >
    Name 2
  </span>
  <span
    className="mb-4 Completed"
  >
    Выполнен
  </span>
  <div
    className="Scroller mb-4"
  >
    FeedItemIngredients
  </div>
  <div
    className="FeedItemDetailsFooter"
  >
    <span
      className="text_color_inactive"
    >
      02.01.2020, 00:00:00
    </span>
    <span
      className="text_type_digits-default"
    >
      22
      CurrencyIcon
    </span>
  </div>
</div>
`;
